Added Contract close functionality